# SmartFridge

./: .gitignore  BuildAndRun.sh  CMakeLists.txt  SmartFridge.cpp  SmartFridge.h  SmartFridge.h.in
